# evd1

./: .gitignore  README.md
cvtest/: CMakeLists.txt  main.cpp
empty_doc/: CMakeLists.txt  main.cpp
exercise 2_1/: CMakeLists.txt  main.cpp
exercise2_1/: main.cpp
exercise2_2/: CMakeLists.txt  main.cpp
exercise2_3/: CMakeLists.txt  main.cpp
exercise3_1/: CMakeLists.txt  main.cpp
exercise3_1b/: main.cpp
exercise3_2/: CMakeLists.txt  main.cpp
exercise3_2a/: CMakeLists.txt  main.cpp
exercise3_2b/: CMakeLists.txt  main.cpp
exercise3_2c/: CMakeLists.txt  main.cpp
exercise3_3/: CMakeLists.txt  main.cpp
exercise4_1/: main.cpp
exercise4_2/: main.cpp
exercise4_3/: main.cpp
exercise5_1/: main.cpp
exercise5_2/: main.cpp
exercise5_2_improved/: main.cpp
exercise5_3/: main.cpp
exercise5_4/: main.cpp
exercise6_1/: main.cpp
exercise6_2/: main.cpp
exercise6_3a/: main.cpp
exercise6_3b/: main.cpp
feature_test/: main.cpp
feature_test2/: main.cpp
feature_test3/: main.cpp
hellovision4/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
objectdetection/: CMakeLists.txt
objectdetection/src/: main.cpp
test_brew/: CMakeLists.txt
trackbar/: main.cpp
