cmake_minimum_required(VERSION 3.26)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/build)
project( Hellovision)
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( TestKentekens src/main.cpp )
target_link_libraries( TestKentekens ${OpenCV_LIBS} )